--- a/src/app/components/notifications/notifications.component.html
+++ b/src/app/components/notifications/notifications.component.html
@@ -65,6 +65,9 @@
           <p class="text-sm text-gray-500 mt-1">
             {{ notification.date | date : "medium" }}
           </p>
+          <p class="text-xs text-gray-500 italic mb-1">
+            From: {{ notification.community }}
+          </p>
           <span
             class="text-xs font-medium mt-2 inline-block px-2.5 py-0.5 rounded-full"
             [ngClass]="{
@@ -79,8 +82,10 @@
 
         <div class="flex-shrink-0 ml-4">
           <button
-            *ngIf="isAdmin"
-            (click)="deleteNotification(notification._id)"
+            *ngIf="canDelete(notification)"
+            (click)="
+              deleteNotification(notification._id, notification.community)
+            "
             class="p-1.5 text-gray-400 hover:text-red-600 hover:bg-red-100 rounded-full transition duration-150 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
             aria-label="Delete notification"
           >
